--- a/public/assets/css/core.css
+++ b/public/assets/css/core.css
@@ -2,14 +2,66 @@ body{
 	padding-top: 120px;
 }
 
+
+
+/* HEADER & NAV STYLES */
+
+
 .navbar-inverse {
-	background-color: #333;
-	border-color: #080808;
-	padding: 28px 0;
+	background-color: #c45050;
+	border-color: #ccc;
+	padding: 30px 0 10px 0;
+	
 }
+.navbar-inverse .navbar-brand{
+	font-size: 2em;
+	color: #ccc;
+}
+.navbar-inverse .navbar-brand>li>a:hover{
+	font-size: 2em;
+}
+.navbar-inverse .navbar-brand,
+.navbar-inverse .navbar-nav>li>a
+{
+	color:#fff;
+	padding: 3px 9px;
+	margin-left: 20px;
+}
+.navbar-inverse .navbar-nav>li>a:hover{
+	background: #fff;
+	color:#333;
+	border-radius: 5px;
+}
+.navbar-inverse .navbar-nav{
+	float: right;
+}
+
+/* FORM BUTTON & INPUT STYLES */
+
+
 input[type=submit]{
 	margin: 20px 0 ;
 }
 .form-group input{
 	margin-bottom: 10px;
+}
+.btn-primary{
+	background-color: #c45050;
+	border-color: #ccc;
+}
+.btn-primary:hover{
+	background-color: #fff;
+	border-color: #ccc;
+	color:#c45050;
+}
+
+.fa-bolt{
+	margin-right: 5px;
+	color: #000;
+	border-color: #fff;
+}
+.fa-circle{
+	font-size: 10px;
+	padding: 0 2px;
+	color: #fff;
 }
