--- a/public/assets/css/core.css
+++ b/public/assets/css/core.css
@@ -71,3 +71,29 @@ input[type=submit]{
 	padding: 0 2px;
 	color: #fff;
 }
+.fa-github-alt{
+	margin-left: 5px;
+}
+.user-profile{
+	padding: 10px 20px;
+	background-color: #f3f3f3;
+	border-radius: 5px;
+	width:30%;
+	float: right;
+}
+.links{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.edit-profile{
+	background-color: #fff;
+	border-color: #ccc;
+	border: 1px solid #ccc;
+	color: #fff;
+	display: inline-block;
+	float: right;
+	padding: 4px 10px;
+	border-radius: 5px; 
+}
